# portfolio-backend

./: .dockerignore  .env.coolify.example  .env.example  .env.production.example  .gitignore  ADMIN_ACCESS.md  API_DOCUMENTATION.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_FIX.md  Dockerfile  Dockerfile.prod  LICENSE  MANUAL_PR_INSTRUCTIONS.md  MULTILINGUAL_PLAN.md  PR_SUMMARY.md  README.md  SECURITY.md  TESTING.md  alembic.ini  clean.sh  coolify-deploy.md  create_pr.sh  docker-compose.prod.yml  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-prod.txt  requirements-test.txt  requirements.txt  restart_server.sh  setup_admin.py  test_multilingual.py
.github/workflows/: ci.yml  security.yml
alembic/: env.py
alembic/versions/: 13c674603dc9_add_content_translations_table_for_.py  2d0bbaac408c_remove_unused_url_columns.py  3397abbe2eec_initial_migration_with_all_models.py  427200ffd139_simplify_translations_with_direct_.py  483063a3ebc7_add_hero_description_and_job_title_.py  4bcf188bd080_add_active_flags_and_cv_field.py  5a8b9c2d1e3f_add_social_media_metadata_fields_to_.py  5bb105fc763c_add_contact_messages_table.py  6e6b0ef8870d_add_sender_name_field_to_contact_table.py  72f253e55880_refactor_skills_add_skill_categories_.py  7462e3534aeb_remove_technologies_column_from_projects.py  764c51636101_make_project_image_url_optional.py  809b91e133b4_add_password_hash_column_to_users.py  8671d66ad488_add_site_config_table_and_modify_about_.py  9752015bd799_remove_is_in_progress_column_from_.py  a3e3c1c7643a_fix_string_lengths_for_sqladmin.py  a5c1e7c7d003_restore_foreign_keys_in_skills.py  b85f4e27e56b_update_models_remove_translations_and_.py  c81447923a67_remove_field_of_study_and_description_.py  cbb59697241b_add_file_upload_fields.py  d384c71f3ccd_fix_nationality_defaults.py  d6e931d2de31_remove_unnecessary_social_media_fields.py  eb34a9f87720_restore_foreign_key_constraint_for_.py  f61113e4cea4_update_site_config_and_contact_models.py  update_schema_for_website.py  (+1 more)
app/: admin.py  config.py  database.py  exceptions.py  main.py  storage.py
docs/: README.md
scripts/: migrate_technologies_to_skills.py  seed_data.py
tests/: conftest.py  test_api_endpoints.py  test_services.py
(+80 files in other folders)
